<resources>
    <string name="app_name">Stroke Assistant</string>

    <string name="activity_predefined_text">Predefined Text</string>

    <string name="game_title">Name the color of the last ball.</string>
    <string name="yellow">yellow</string>
    <string name="blue">blue</string>
    <string name="activity_mem_game">Training Game</string>
    <string name="mem_game">Training Game</string>
    <string name="game_score">Score: %1$d %2$s</string>
    <string name="wrong_please_try_again">Wrong! Please Try Again!</string>
    <string name="time">Time: %1$d</string>
    <string name="over">Over!</string>
    <string name="start">Start</string>
    <string name="high_score">High Score</string>
    <string name="time_is_up">Time\'s Up!</string>
    <string name="game_ending">Welcome to the end of the world!</string>

    <string name="action_add_predefined_text">Add Predefined Text</string>
    <string name="no_predefined_text">No predefined text yet.</string>
    <string name="dialog_predefined_title">New predefined text</string>
    <string name="dialog_predefined_add">Add</string>
    <string name="dialog_predefined_cancel">Cancel</string>
    <string name="dialog_predefined_hint">Eg. I want to eat&#8230;</string>
    <string name="dialog_predefined_delete_title">Delete predefined text</string>
    <string name="dialog_predefined_delete_message">Are you sure to delete the text?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <string name="add_health_rec_title">New Health Record</string>
    <string name="dialog_health_rec_title">New Health Record</string>
    <string name="activity_health_rec">Personal Health Record</string>
    <string name="no_health_record">No health records yet.</string>
    <string name="health_rec_blood_pressure">Blood Pressure</string>
    <string name="health_rec_blood_sugar">Blood Sugar</string>
    <string name="health_rec_body_weight">Body Weight (KG)</string>
    <string name="health_rec_body_height">Body Height (M)</string>
    <string name="health_rec_bmi">BMI</string>
    <string name="health_rec_date">Date of entry</string>
    <string name="blood_pressure_hint">Eg. 110</string>
    <string name="body_weight_hint">Eg. 60 (in KG)</string>
    <string name="body_height_hint">Eg. 1.75 (in M)</string>
    <string name="blood_sugar_hint">Eg. 130</string>
    <string name="empty_field">Please fill in all fields!</string>
    <string name="invalid_blood_pressure">Must be integer within 0 and 250</string>
    <string name="invalid_blood_sugar">Must be integer within 0 and 200</string>
    <string name="invalid_weight_height">Must be larger than 0</string>
    <string name="activity_add_health_records">Add Health Records</string>
    <string name="action_save_health_record">Save</string>
    <string name="dialog_ok">Ok</string>
    <string name="health_rec_saved">New Health Record Saved</string>
    <string name="dialog_delete_health_rec_title">Delete health record</string>
    <string name="dialog_view_health_rec_title">Health record</string>
    <string name="dialog_health_delete_message">Are you sure to delete the record?</string>
    <string name="button_bmi">BMI Graph</string>
    <string name="button_blood_pressure">Blood Pressure Graph</string>
    <string name="button_blood_sugar">Blood Sugar Graph</string>
    <string name="graph_activity">Health Record Graphs</string>
    <string name="reminder">Reminder</string>
    <string name="no_reminder">No reminder yet.</string>
    <string name="activity_reminder">Reminders</string>
    <string name="reminder_title">Title</string>
    <string name="reminder_description">Description</string>
    <string name="reminder_time">Time</string>
    <string name="reminder_minute">Minute</string>
    <string name="reminder_title_hint">Eg. Eat medicine</string>
    <string name="reminder_description_hint">Eg. Eat 2 tablets of medicine</string>
    <string name="add_reminder">Add new reminder</string>
    <string name="invalid_hour">Invalid Hour Input</string>
    <string name="reminder_time_hint">Click here to change the time</string>
    <string name="invalid_minute">Invalid Minute Input</string>
    <string name="reminder_removal_error">Error removing old reminders</string>
    <string name="pre_defined_text">Predefined \n Text</string>
    <string name="training_game">Training \n Game</string>
    <string name="medicine_reminder">Medicine \n Reminder</string>
    <string name="health_record">Health \n Record</string>
    <string name="emergency_call">Emergency \n Call</string>
    <string name="activity_emergency_call">Emergency Call</string>
    <string name="activity_new_emergency_contact">New Contact</string>
    <string name="static_text_contact_person">Contact Person</string>
    <string name="static_text_contact_number">Contact Number</string>
    <string name="static_text_contact_address_optional">Contact Address (Optional)</string>
    <string name="action_save_contact">Save</string>
    <string name="static_text_no_emergency_contacts">No emergency contacts yet</string>
    <string name="static_text_contact_address_display">Contact Address</string>
    <string name="static_text_default_emergency_contact" >Default Emergency Contact</string>
    <string name="contact_person_hint">E.g. Howard</string>
    <string name="contact_number_hint">E.g. 0123456789</string>
    <string name="contact_address_hint">E.g. No.1, Persiaran Bukit Utama, Bandar Utama, 47800 Petaling Jaya,  Selangor Darul Ehsan, Malaysia.</string>

</resources>
