<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            android:text="@string/reminder_title"
            android:textColor="@color/colorText"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/reminder_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:background="@null"
            android:hint="@string/reminder_title_hint"
            android:inputType="textCapSentences"
            android:paddingBottom="16dp"
            android:paddingTop="8dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            android:text="@string/reminder_description"
            android:textColor="@color/colorText"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/reminder_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:background="@null"
            android:hint="@string/reminder_description_hint"
            android:inputType="textCapSentences"
            android:paddingBottom="16dp"
            android:paddingTop="8dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            android:text="@string/reminder_time"
            android:textColor="@color/colorText"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/reminder_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:background="@null"
            android:inputType="number"
            android:paddingBottom="16dp"
            android:paddingTop="8dp"
            android:text="@string/reminder_time_hint"
            android:textColor="#999"
            android:textSize="16sp"/>

    </LinearLayout>
</ScrollView>