<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            android:text="@string/health_rec_body_weight"
            android:textColor="@color/colorText"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/add_body_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:background="@null"
            android:hint="@string/body_weight_hint"
            android:inputType="numberDecimal"
            android:paddingBottom="16dp"
            android:paddingTop="8dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            android:text="@string/health_rec_body_height"
            android:textColor="@color/colorText"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/add_body_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:background="@null"
            android:hint="@string/body_height_hint"
            android:inputType="numberDecimal"
            android:paddingBottom="16dp"
            android:paddingTop="8dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            android:text="@string/health_rec_blood_sugar"
            android:textColor="@color/colorText"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/add_blood_sugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:background="@null"
            android:hint="@string/blood_sugar_hint"
            android:inputType="number"
            android:paddingBottom="16dp"
            android:paddingTop="8dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            android:text="@string/health_rec_blood_pressure"
            android:textColor="@color/colorText"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/add_blood_pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:background="@null"
            android:hint="@string/blood_sugar_hint"
            android:inputType="number"
            android:paddingBottom="16dp"
            android:paddingTop="8dp"
            android:textSize="16sp"/>
    </LinearLayout>

</ScrollView>