<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_blood_pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/button_blood_pressure"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/button_blood_sugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/button_blood_sugar"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/button_bmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/button_bmi"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"/>

    </LinearLayout>
</android.support.v7.widget.CardView>