<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="aad.assignment.strokeassistant.MemGameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_score"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="20sp"/>
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/txt_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone"/>


    <LinearLayout
        android:id="@+id/layout_ball"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ListView
            android:id="@+id/list_view_ball"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="8.0dp"
            android:listSelector="@android:color/transparent"
            android:scrollbars="none"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_yellow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/minionYellow"
            android:text="@string/yellow"
            android:textColor="@color/minionBlue"
            android:textSize="35sp"/>

        <Button
            android:id="@+id/btn_blue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/minionBlue"
            android:text="@string/blue"
            android:textColor="@color/minionYellow"
            android:textSize="35sp"/>
    </LinearLayout>
</LinearLayout>
