<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="aad.assignment.strokeassistant.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/btnPredefinedText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/ic_definedtext"
                android:backgroundTint="@color/colorHalfWhite"
                android:backgroundTintMode="multiply"
                android:gravity="center"
                android:padding="16dp"
                android:scaleX="1.1"
                android:singleLine="false"
                android:text="@string/pre_defined_text"
                android:textSize="18sp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/btnToMemGame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/ic_game"
                android:backgroundTint="@color/colorHalfWhite"
                android:backgroundTintMode="multiply"
                android:gravity="center"
                android:padding="16dp"
                android:scaleX="1.1"
                android:singleLine="false"
                android:text="@string/training_game"
                android:textSize="18sp"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/btnReminder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:background="@mipmap/ic_medicine"
                android:backgroundTint="@color/colorHalfWhite"
                android:backgroundTintMode="multiply"
                android:gravity="center"
                android:padding="16dp"
                android:scaleX="1.1"
                android:text="@string/medicine_reminder"
                android:textSize="18sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/btnHealthRec"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:background="@mipmap/ic_healthrecord"
                android:backgroundTint="@color/colorHalfWhite"
                android:backgroundTintMode="multiply"
                android:padding="16dp"
                android:scaleX="1.1"
                android:text="@string/health_record"
                android:textSize="18sp"/>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:padding="0dp"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/ic_emergencycall"
                android:backgroundTint="@color/colorHalfWhite"
                android:backgroundTintMode="multiply"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/emergency_call"
                android:textSize="18sp"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
